--- a/src/views/productDetail.handlebars
+++ b/src/views/productDetail.handlebars
@@ -84,6 +84,8 @@
             quantity
           })
         });
+        const responseData = response.json()
+        console.log(responseData)
   
         if (response.ok) {
           // El producto se agregó al carrito exitosamente
