Se modificó para solo utilizar la estrategia JWT

--- a/src/views/layouts/main.handlebars
+++ b/src/views/layouts/main.handlebars
@@ -94,39 +94,44 @@
 </html>
 
 <script>
-  document.addEventListener("DOMContentLoaded", async function() {
-    try {
-      const response = await fetch("/api/sessions/", {
-        method: "GET",
-        headers: {
-          "Content-Type": "application/json"
-        },
-       
-      });
-      const responseData = await response.json();      
-      console.log(responseData);
+ document.addEventListener("DOMContentLoaded", async function() {
+  try {
+    const response = await fetch("/api/sessions/", {
+      method: "GET",
+      headers: {
+        "Content-Type": "application/json"
+      },
+      credentials: "include"  
+    });
 
-      if (responseData.statusCode === 200) {
-        
-        // Si la respuesta es 200, ocultar loginDiv y register
-        document.getElementById("loginDiv").classList.add("d-none");
-        document.getElementById("register").classList.add("d-none");
-        
-        //Creamos dinamicamente el link del carrito correspondiente al usuario logueado.
-        const cartLink = document.getElementById("cartLink");
-        const userId = responseData.user_id;
-        cartLink.href = `/cart/`;
-      } else if (responseData.statusCode === 401) {
-        // Si la respuesta es 401, ocultar logoutDiv, cartDiv y newProduct
-        document.getElementById("logoutDiv").classList.add("d-none");
-        document.getElementById("cartDiv").classList.add("d-none");
-        document.getElementById("newProduct").classList.add("d-none");
-      }
+    const responseData = await response.json();
+    console.log(responseData);
+
+    if (responseData.statusCode === 200) {
+      // Si la respuesta es 200, ocultar loginDiv y register
+      document.getElementById("loginDiv").classList.add("d-none");
+      document.getElementById("register").classList.add("d-none");
       
-    } catch (error) {
-      console.error("Error:", error);
+      // Crear dinámicamente el link del carrito correspondiente al usuario logueado.
+      const cartLink = document.getElementById("cartLink");
+      const userId = responseData.user_id;
+      cartLink.href = `/cart/`;
+    } else if (responseData.statusCode === 401) {
+      // Si la respuesta es 401, ocultar logoutDiv, cartDiv y newProduct
+      document.getElementById("logoutDiv").classList.add("d-none");
+      document.getElementById("cartDiv").classList.add("d-none");
+      document.getElementById("newProduct").classList.add("d-none");
+
+      
     }
-  });
+  } catch (error) {
+    console.error("Error:", error);
+    // En caso de error, asegurarse de que los divs relevantes estén ocultos
+    document.getElementById("logoutDiv").classList.add("d-none");
+    document.getElementById("cartDiv").classList.add("d-none");
+    document.getElementById("newProduct").classList.add("d-none");
+  }
+});
 
   // Acción al hacer clic en el botón de logout
   document.getElementById("logout").addEventListener("click", async function(event) {
