Se deja funcionando todas las capas

--- a/src/views/productDetail.handlebars
+++ b/src/views/productDetail.handlebars
@@ -85,7 +85,7 @@
           })
         });
         const responseData = response.json()
-        console.log(responseData)
+        console.log(responseData);
   
         if (response.ok) {
           // El producto se agregó al carrito exitosamente
