Desafío Opcional Mocking y manejo de errores Sprint 12

--- a/src/views/login.handlebars
+++ b/src/views/login.handlebars
@@ -27,6 +27,7 @@
         </div>
         <button type="submit" class="btn btn-primary">Iniciar Sesión</button>
       </form>
+       <a href="/reset-password-step1" class="text-decoration-none text-dark d-block mt-3 text-center">Olvidé Mi Contraseña</a>
       <div class="alert alert-danger mt-3 d-none" id="loginError" role="alert">
       </div>
     </div>
