Se movió ruta upload para carga de producto agregando al vendedor como propiedad para identificar un producto con un vendedor

--- a/src/views/productsReal.handlebars
+++ b/src/views/productsReal.handlebars
@@ -149,15 +149,20 @@
     }; 
     try { 
       // Enviar la imagen al servidor y obtener la URL de la imagen guardada 
-      const response = await fetch("/upload", { 
-        method: "POST", 
-        body: formData
-      }); 
-      if (response.ok) { 
-        // Obtener la URL de la imagen del servidor 
-        const imageUrl = await response.text(); 
-        // Agregar la URL de la imagen al objeto del nuevo producto 
-        newProduct.photo = imageUrl; 
+      const response = await fetch("/api/upload", {
+      method: "POST",
+      body: formData,
+      credentials: "include" 
+    });
+      if (response.ok) {
+      const result = await response.json();
+      const imageUrl = result.filename;
+      const seller_id = result.user_id;
+
+      // Agregar la URL de la imagen y el seller_id al objeto del nuevo producto
+      newProduct.photo = imageUrl;
+      newProduct.seller_id = seller_id;
+      
         const successMessage = document.getElementById("successMessage"); 
         successMessage.classList.remove("d-none"); 
         successMessage.classList.add("d-block"); 
