Avancé creando middleware para no poder agregar uno mismo sus productos al carrito y también mejoré la vista de cuenta agregando los productos publicados

--- a/src/views/layouts/main.handlebars
+++ b/src/views/layouts/main.handlebars
@@ -50,6 +50,12 @@
         <li class="nav-item active">
           <a class="nav-link" id="newProduct" href="/products/real">Publicar un Producto</a>
         </li>
+        <li class="nav-item active">
+          <a class="nav-link" id="purchases" href="#">Compras</a>
+        </li>
+        <li class="nav-item active">
+          <a class="nav-link" id="sells" href="#">Ventas</a>
+        </li>
         <li class="nav-item" id="register">
           <a class="nav-link" href="/register">Registro</a>
         </li>
@@ -121,6 +127,8 @@
       document.getElementById("logoutDiv").classList.add("d-none");
       document.getElementById("cartDiv").classList.add("d-none");
       document.getElementById("newProduct").classList.add("d-none");
+      document.getElementById("purchases").classList.add("d-none");
+      document.getElementById("sells").classList.add("d-none");
 
       
     }
