Se implementó edicion de productos por parte del usuario vendedor

--- a/src/views/userPanel.handlebars
+++ b/src/views/userPanel.handlebars
@@ -30,7 +30,7 @@
             <div class="card-body">
               <h5 class="card-title">{{this.title}}</h5>
               <p class="card-text">Precio:${{this.price}} </p>
-              <a href="/misproductos/{{this._id}}" class="btn btn-primary">Ver más</a>
+              <a href="/products/{{this._id}}" class="btn btn-primary">Ver / Editar</a>              
             </div>
           </div>
         </div>
