--- a/src/views/productDetail.handlebars
+++ b/src/views/productDetail.handlebars
@@ -4,10 +4,10 @@
     <div class="row justify-content-center">
       <div class="col-md-8 col-lg-6 col-xl-6">
         <div class="card" style="border-radius: 15px;">
-          <div class="bg-image hover-overlay ripple ripple-surface ripple-surface-light text-center"
+          <div class="bg-image hover-overlay ripple ripple-surface ripple-surface-light text-center mt-3"
             data-mdb-ripple-color="light">
             <img src="{{productFound.photo}}"
-              class="img-fluid"
+              class="img-fluid" style="max-height: 300px; width: auto; border-radius: 15px;"
               alt="{{productFound.title}}" />
           </div>
           <div class="card-body pb-0">
