--- a/src/views/cart.handlebars
+++ b/src/views/cart.handlebars
@@ -35,8 +35,10 @@
 </div>
 
 
+
 <script>
 
+// Función para llamar al monto total del carrito. 
 document.addEventListener("DOMContentLoaded", async () => {
     try {
       const response = await fetch('/api/tickets');
@@ -73,58 +75,22 @@ document.addEventListener("DOMContentLoaded", async () => {
 
   // Función para procesar el pago y contactar al vendedor
  
-  async function checkout() { 
+  async function checkout() {    
   
-  try {
-    // Obtener el total de la compra
-    const totalAmount = document.getElementById('totalAmount').innerText;
-    const cartInfo = {{{json cartInfo}}}; // Convertir cartInfo a un objeto JavaScript
+  try {        
     
-    // Agrupar los productos por vendedor
-    const groupedBySeller = cartInfo.reduce((acc, item) => {
-      const sellerId = item.seller_id._id;
-      if (!acc[sellerId]) {
-        acc[sellerId] = {
-          seller_id: item.seller_id._id,
-          products: [],
-        };
-      }
-      acc[sellerId].products.push({
-        product_id: item.product_id._id,
-        quantity: item.quantity,
-      });
-      return acc;
-    }, {});
-
-    // Convertir el objeto agrupado en un array de vendedores
-    const sellers = Object.values(groupedBySeller);
-
-    console.log(sellers)
-
-    // Estructurar los datos para la solicitud POST
-    const purchaseData = {
-      buyer_id: cartInfo[0].buyer_id._id,  
-      sellers: sellers,
-      total_purchase: parseFloat(totalAmount),
-      state: 'success', 
-    };   
-
-
     // Enviar la solicitud POST al endpoint /api/purchase
     const response = await fetch('/api/purchase', {
       method: 'POST',
       headers: {
         'Content-Type': 'application/json',
-      },
-      body: JSON.stringify(purchaseData),
+      }      
     });
 
     if (response.ok) {
       // Redirigir o mostrar un mensaje de éxito
       console.log('Compra realizada con éxito');
-      // Puedes redirigir a una página de éxito, por ejemplo:
-      // window.location.href = '/success';
-      clearCart();
+      // window.location.href = '/success'; // Redirigir a una página de éxito
     } else {
       console.error('Error al procesar la compra:', response.statusText);
     }
@@ -141,8 +107,6 @@ document.addEventListener("DOMContentLoaded", async () => {
       });
 
       responseData = response.json()
-
-      console.log(responseData)
 
       if (response.ok) {
         // Si la solicitud se realizó con éxito, recargar la página o realizar otra acción
