--- a/src/views/layouts/main.handlebars
+++ b/src/views/layouts/main.handlebars
@@ -51,10 +51,10 @@
           <a class="nav-link" id="newProduct" href="/products/real">Publicar un Producto</a>
         </li>
         <li class="nav-item active">
-          <a class="nav-link" id="purchases" href="#">Compras</a>
+          <a class="nav-link" id="purchases" href="/miscompras">Compras</a>
         </li>
         <li class="nav-item active">
-          <a class="nav-link" id="sells" href="#">Ventas</a>
+          <a class="nav-link" id="sells" href="/misventas">Ventas</a>
         </li>
         <li class="nav-item" id="register">
           <a class="nav-link" href="/register">Registro</a>
