Se agrega logica de vista vendedor

--- a/src/views/productDetail.handlebars
+++ b/src/views/productDetail.handlebars
@@ -82,10 +82,11 @@
             <p id="descriptionContent" class="mt-2">{{productFound.description}}</p>
             </div>
         </div>
-        <div class="d-flex align-items-center ms-3">                
-            <input type="text" id="editDescription" style="display: none; width:100%; height: 100px;">
-            <button id="saveDescriptionBtn" class="ms-3 btn btn-primary" style="display: none;">Guardar</button>
-        </div>
+          <div class="d-flex align-items-center ms-3 mb-2">                
+          <textarea id="editDescription" style="display: none; width:100%; height: 100px;"></textarea>
+          <button id="saveDescriptionBtn" class="ms-3 btn btn-primary" style="display: none;">Guardar</button>
+          </div>
+
           <hr class="my-0" />
           <div class="card-body">
             <div class="d-flex justify-content-between align-items-center mb-3">
