Se agregaron algunas vistas y función de spinner al register

--- a/src/views/layouts/main.handlebars
+++ b/src/views/layouts/main.handlebars
@@ -81,11 +81,12 @@
   </nav>
 </header>
     
-
+    <div class="d-flex flex-column min-vh-100">
     {{{body}}}
+    </div>
 
     <!-- Footer -->
-    <footer class="bg-dark text-light text-center fixed-bottom py-3">
+    <footer class="bg-dark text-light text-center py-3 mt-auto">
       <div class="container">
         <p>Manantiales Market © 2024 - Todos los derechos reservados</p>
       </div>
