Se implementó pasarela de pagos de Strip

--- a/src/views/layouts/main.handlebars
+++ b/src/views/layouts/main.handlebars
@@ -48,7 +48,7 @@
           <a class="nav-link" href="/">Inicio</a>
         </li>
         <li class="nav-item active">
-          <a class="nav-link" id="newProduct" href="/products/real">Publicar un Producto</a>
+          <a class="nav-link" id="newProduct" href="/products/new">Publicar un Producto</a>
         </li>
         <li class="nav-item active">
           <a class="nav-link" id="purchases" href="/miscompras">Compras</a>
