--- a/src/views/mysales.handlebars
+++ b/src/views/mysales.handlebars
@@ -81,7 +81,7 @@
       <p class="text-center">No Tienes Ventas</p>
     </div>
     <div class="col-12 d-flex justify-content-center">
-      <a href="/products/real" class="btn btn-primary">Publicar Un Producto</a>
+      <a href="/products/new" class="btn btn-primary">Publicar Un Producto</a>
     </div>
   {{/if}}
 </div>
