--- a/src/views/cart.handlebars
+++ b/src/views/cart.handlebars
@@ -35,7 +35,7 @@
 </div>
 
 
-
+<script src="https://js.stripe.com/v3/"></script>
 <script>
 
 // Función para llamar al monto total del carrito. 
@@ -75,29 +75,39 @@ document.addEventListener("DOMContentLoaded", async () => {
 
   // Función para procesar el pago y contactar al vendedor
  
-  async function checkout() {    
-  
-  try {        
-    
-    // Enviar la solicitud POST al endpoint /api/purchase
+  async function checkout() {
+  try {
     const response = await fetch('/api/purchase', {
       method: 'POST',
       headers: {
         'Content-Type': 'application/json',
-      }      
+      },
     });
 
     if (response.ok) {
-      // Redirigir o mostrar un mensaje de éxito
-      console.log('Compra realizada con éxito');
-      // window.location.href = '/success'; // Redirigir a una página de éxito
+      const data = await response.json();
+      console.log('Datos recibidos del backend:', data); // Agrega esto para ver lo que se recibe
+
+      // Inicializar Stripe con la clave pública
+      const stripe = Stripe('pk_test_51PpwcJJ6qMsLzW23OuKLMHonqWADCwZkG9S5GGqzldzHr2rb6EUslWW7GENSwmeFj7y7lU6zho2fI3wWtnLPdiEN00TkBVA8xS');
+
+      // Redirigir al usuario a la página de pago de Stripe
+      const { stripeSessionUrl } = data;
+
+      if (stripeSessionUrl) {
+        window.location.href = stripeSessionUrl;
+      } else {
+        console.error('URL de la sesión de Stripe no recibida.');
+      }
     } else {
-      console.error('Error al procesar la compra:', response.statusText);
+      const errorData = await response.json();
+      console.error('Error al procesar la compra:', errorData);
     }
   } catch (error) {
     console.error('Error al procesar la compra:', error.message);
   }
 }
+
 
   // Función para cancelar la compra y vaciar el carrito
       async function clearCart() {
